chore: add code style checking and format
