# packages/chap-lib/src/httpfunctions/models/BackTestForecast.ts
@@ -3,12 +3,11 @@
 /* tslint:disable */
 /* eslint-disable */
 export type BackTestForecast = {
-    period: string;
-    orgUnit: string;
-    id?: (number | null);
-    backtestId: number;
-    lastTrainPeriod: string;
-    lastSeenPeriod: string;
-    values?: Array<number>;
-};
-
+    period: string
+    orgUnit: string
+    id?: number | null
+    backtestId: number
+    lastTrainPeriod: string
+    lastSeenPeriod: string
+    values?: Array<number>
+}
