# packages/chap-lib/src/httpfunctions/models/FullPredictionResponse.ts
@@ -2,9 +2,8 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-import type { PredictionResponse } from './PredictionResponse';
+import type { PredictionResponse } from './PredictionResponse'
 export type FullPredictionResponse = {
-    diseaseId: string;
-    dataValues: Array<PredictionResponse>;
-};
-
+    diseaseId: string
+    dataValues: Array<PredictionResponse>
+}
