# packages/chap-lib/src/httpfunctions/models/MultiPointModel.ts
@@ -2,9 +2,8 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-import type { Coordinates } from './Coordinates';
+import type { Coordinates } from './Coordinates'
 export type MultiPointModel = {
-    type?: string;
-    coordinates: Array<Coordinates>;
-};
-
+    type?: string
+    coordinates: Array<Coordinates>
+}
