# packages/chap-lib/src/httpfunctions/models/PointModel.ts
@@ -2,9 +2,8 @@
 /* istanbul ignore file */
 /* tslint:disable */
 /* eslint-disable */
-import type { Coordinates } from './Coordinates';
+import type { Coordinates } from './Coordinates'
 export type PointModel = {
-    type?: string;
-    coordinates: Coordinates;
-};
-
+    type?: string
+    coordinates: Coordinates
+}
